--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="XUwChiv09JQ3nsUGn9ujpFIWfnq0QGAvkqMwmzDqzvA" />
     <title>Hello World</title>
 
     <!-- Required meta tags -->
