--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="style.css">
+    
+    <meta name="google-site-verification" content="XUwChiv09JQ3nsUGn9ujpFIWfnq0QGAvkqMwmzDqzvA" />
+    
 </head>
 <body>
 <header class="site-header">
