--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="google-site-verification" content="XUwChiv09JQ3nsUGn9ujpFIWfnq0QGAvkqMwmzDqzvA" />
-    <title>Brayden Noh</title>
+    <title>Brayden Noh Portfolio</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
