--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="col">
                 <ul class="breadcrumbs flex align-items-center">
                     <li><a href="#">Brayden Noh</a></li>
-                    <li>Portfolio</li>
+                    <li>Photography Portfolio</li>
                 </ul><!-- .breadcrumbs -->
             </div><!-- .col -->
         </div><!-- .row -->
