--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="google-site-verification" content="XUwChiv09JQ3nsUGn9ujpFIWfnq0QGAvkqMwmzDqzvA" />
-    <title>Brayden Noh Portfolio</title>
+    <title>Hello World</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -16,9 +15,6 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="style.css">
-    
-    <meta name="google-site-verification" content="XUwChiv09JQ3nsUGn9ujpFIWfnq0QGAvkqMwmzDqzvA" />
-    
 </head>
 <body>
 <header class="site-header">
@@ -52,7 +48,7 @@
             <div class="col">
                 <ul class="breadcrumbs flex align-items-center">
                     <li><a href="#">Brayden Noh</a></li>
-                    <li>Photography Portfolio</li>
+                    <li>Portfolio</li>
                 </ul><!-- .breadcrumbs -->
             </div><!-- .col -->
         </div><!-- .row -->
@@ -231,15 +227,15 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
-                        <img src="images/11.jpg" alt="">
+                        <img src="images/12.jpg" alt="">
                     </figure>
 
                     <div class="entry-content flex flex-column align-items-center justify-content-center">
-                        <h3><a href="#">Evening Jog</a></h3>
+                        <h3><a href="#">American Parade</a></h3>
 
                         <ul class="flex flex-wrap justify-content-center">
-                            <li><a href="#">Paris,</a></li>
-                            <li><a href="#">Galaxy S9</a></li>
+                            <li><a href="#">Philadelphia,</a></li>
+                            <li><a href="#">Nikon Z6</a></li>
                         </ul>
                     </div><!-- .entry-content -->
                 </div><!-- .portfolio-content -->
@@ -248,15 +244,15 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
-                        <img src="images/15.jpg" alt="">
+                        <img src="images/14.jpg" alt="">
                     </figure>
 
                     <div class="entry-content flex flex-column align-items-center justify-content-center">
-                        <h3><a href="#">Flower Skin</a></h3>
+                        <h3><a href="#">Silent Morning</a></h3>
 
                         <ul class="flex flex-wrap justify-content-center">
-                            <li><a href="#">Portfolio,</a></li>
-                            <li><a href="#">Tree</a></li>
+                            <li><a href="#">Amsterdam,</a></li>
+                            <li><a href="#">Pixel XL</a></li>
                         </ul>
                     </div><!-- .entry-content -->
                 </div><!-- .portfolio-content -->
@@ -265,15 +261,15 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
-                        <img src="images/15.jpg" alt="">
+                        <img src="images/16.jpg" alt="">
                     </figure>
 
                     <div class="entry-content flex flex-column align-items-center justify-content-center">
-                        <h3><a href="#">Flower Skin</a></h3>
+                        <h3><a href="#">Motorcyclists</a></h3>
 
                         <ul class="flex flex-wrap justify-content-center">
-                            <li><a href="#">Portfolio,</a></li>
-                            <li><a href="#">Tree</a></li>
+                            <li><a href="#">Roma,</a></li>
+                            <li><a href="#">iPhone 6</a></li>
                         </ul>
                     </div><!-- .entry-content -->
                 </div><!-- .portfolio-content -->
@@ -282,15 +278,15 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
-                        <img src="images/15.jpg" alt="">
+                        <img src="images/17.PNG" alt="">
                     </figure>
 
                     <div class="entry-content flex flex-column align-items-center justify-content-center">
-                        <h3><a href="#">Flower Skin</a></h3>
+                        <h3><a href="#">Columns</a></h3>
 
                         <ul class="flex flex-wrap justify-content-center">
-                            <li><a href="#">Portfolio,</a></li>
-                            <li><a href="#">Tree</a></li>
+                            <li><a href="#">DC,</a></li>
+                            <li><a href="#">Nikon Z6</a></li>
                         </ul>
                     </div><!-- .entry-content -->
                 </div><!-- .portfolio-content -->
@@ -299,15 +295,15 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
-                        <img src="images/15.jpg" alt="">
+                        <img src="images/13.jpg" alt="">
                     </figure>
 
                     <div class="entry-content flex flex-column align-items-center justify-content-center">
-                        <h3><a href="#">Flower Skin</a></h3>
+                        <h3><a href="#">Victory Morning</a></h3>
 
                         <ul class="flex flex-wrap justify-content-center">
-                            <li><a href="#">Portfolio,</a></li>
-                            <li><a href="#">Tree</a></li>
+                            <li><a href="#">Auburn,</a></li>
+                            <li><a href="#">Nikon Z6</a></li>
                         </ul>
                     </div><!-- .entry-content -->
                 </div><!-- .portfolio-content -->
@@ -316,15 +312,15 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
-                        <img src="images/15.jpg" alt="">
+                        <img src="images/20.jpg" alt="">
                     </figure>
 
                     <div class="entry-content flex flex-column align-items-center justify-content-center">
-                        <h3><a href="#">Flower Skin</a></h3>
+                        <h3><a href="#">Remember 88</a></h3>
 
                         <ul class="flex flex-wrap justify-content-center">
-                            <li><a href="#">Portfolio,</a></li>
-                            <li><a href="#">Tree</a></li>
+                            <li><a href="#">Seoul,</a></li>
+                            <li><a href="#">Pixel XL</a></li>
                         </ul>
                     </div><!-- .entry-content -->
                 </div><!-- .portfolio-content -->
