--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
-                        <img src="images/14.JPG" alt="">
+                        <img src="images/am.JPG" alt="">
                     </figure>
 
                     <div class="entry-content flex flex-column align-items-center justify-content-center">
