--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Hello World</title>
+    <title>Brayden Noh Portfolio</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -244,7 +244,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
-                        <img src="images/am.JPG" alt="">
+                        <img src="images/12.JPG" alt="">
                     </figure>
 
                     <div class="entry-content flex flex-column align-items-center justify-content-center">
