--- a/index.html
+++ b/index.html
@@ -244,15 +244,15 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
-                        <img src="images/12.JPG" alt="">
+                        <img src="images/12.jpg" alt="">
                     </figure>
 
                     <div class="entry-content flex flex-column align-items-center justify-content-center">
-                        <h3><a href="#">Silent Morning</a></h3>
+                        <h3><a href="#">American Parade</a></h3>
 
                         <ul class="flex flex-wrap justify-content-center">
-                            <li><a href="#">Amsterdam,</a></li>
-                            <li><a href="#">Pixel XL</a></li>
+                            <li><a href="#">Philadelphia,</a></li>
+                            <li><a href="#">Nikon Z6</a></li>
                         </ul>
                     </div><!-- .entry-content -->
                 </div><!-- .portfolio-content -->
