--- a/index.html
+++ b/index.html
@@ -312,20 +312,20 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
-                        <img src="IMG_9203.PNG" alt="">
+                        <img src="images/13.jpg" alt="">
                     </figure>
 
                     <div class="entry-content flex flex-column align-items-center justify-content-center">
-                        <h3><a href="#">Sunny Hill</a></h3>
+                        <h3><a href="#">Victory Morning</a></h3>
 
                         <ul class="flex flex-wrap justify-content-center">
-                            <li><a href="#">San Francisco,</a></li>
+                            <li><a href="#">Auburn,</a></li>
                             <li><a href="#">Nikon Z6</a></li>
                         </ul>
                     </div><!-- .entry-content -->
                 </div><!-- .portfolio-content -->
             </div><!-- .col -->
-        </div><!-- .row -->
+
 
         <div class="scroll-down flex flex-column justify-content-center align-items-center d-none d-lg-block">
            
