--- a/index.html
+++ b/index.html
@@ -312,14 +312,14 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="portfolio-content">
                     <figure>
-                        <img src="images/13.jpg" alt="">
+                        <img src="images/25.PNG" alt="">
                     </figure>
 
                     <div class="entry-content flex flex-column align-items-center justify-content-center">
-                        <h3><a href="#">Victory Morning</a></h3>
+                        <h3><a href="#">Hilly Train</a></h3>
 
                         <ul class="flex flex-wrap justify-content-center">
-                            <li><a href="#">Auburn,</a></li>
+                            <li><a href="#">San Francisco,</a></li>
                             <li><a href="#">Nikon Z6</a></li>
                         </ul>
                     </div><!-- .entry-content -->
