--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ ga('create', 'UA-XXXXX-Y', 'auto');
 ga('send', 'pageview');
 </script>
 <!-- End Google Analytics -->
-   <figure>
-   <img src="images/1.jpg" alt="">
-   </figure>
+   
+   <img src="images/1.jpg" style = "float: left">
+   
     <title>Brayden Noh Portfolio</title>
 
     <!-- Required meta tags -->
